--- a/css/main.scss
+++ b/css/main.scss
@@ -1,17 +1,32 @@
-#lesson-content {
-	
-.korean-word,
-.english-word {
-    font-weight: bold;
-    font-size: 20px;
-}
+#korean-app {
+	.page-header {
+		 margin-bottom: 30px;
+		font-size: 18px;
+		font-weight: 200;
+		line-height: 30px;
+		color: inherit;
+		background-color: #eeeeee;
+		-webkit-border-radius: 6px;
+		-moz-border-radius: 6px;
+		border-radius: 6px;
+		padding: 10px;
+	}
 
-.phrase {
-    margin: 0 0 0 10px;
-}
+	#lesson-content {
 
-.popover {
-max-width: 500px;
-}
+	.korean-word,
+	.english-word {
+	    font-weight: bold;
+	    font-size: 20px;
+	}
 
+	.phrase {
+	    margin: 0 0 0 10px;
+	}
+
+	.popover {
+	max-width: 500px;
+	}
+
+	}
 }
