Adding ability to remember words in a vocab list

--- a/css/main.scss
+++ b/css/main.scss
@@ -24,9 +24,30 @@
 	    margin: 0 0 0 10px;
 	}
 
-	.popover {
-	max-width: 500px;
+	.page-header {
+			.popover {
+				max-width: 500px;
+				a {
+					cursor: pointer;
+				}
+			}
+		}
 	}
 
+	.vocab-content {
+		display: block;
+		padding: 3px 15px;
+		font-size: 11px;
+		font-weight: bold;
+		line-height: 20px;
+		color: #999999;
+		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+		text-transform: uppercase;
+	}
+
+	footer {
+		p {
+			margin-left: 20px;
+		}
 	}
 }
