--- a/css/main.css
+++ b/css/main.css
@@ -17,3 +17,19 @@
   margin: 0 0 0 10px; }
 #korean-app #lesson-content .popover {
   max-width: 500px; }
+.vocab-content {
+    display: block;
+    padding: 3px 15px;
+    font-size: 11px;
+    font-weight: bold;
+    line-height: 20px;
+    color: #999999;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    text-transform: uppercase;
+  }
+footer p {
+  margin-left: 20px;
+}
+.popover a {
+  cursor: pointer;
+}
