adding close button and escaping html in translations

--- a/css/main.css
+++ b/css/main.css
@@ -33,3 +33,18 @@ footer p {
 .popover a {
   cursor: pointer;
 }
+#vocab-holder .popover button {
+  float: right;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 20px;
+  color: #000000;
+  text-shadow: 0 1px 0 #ffffff;
+  opacity: 0.2;
+  filter: alpha(opacity=20);
+  padding: 0;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  -webkit-appearance: none;
+}
