--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,8 @@
 
 	#lesson-content {
 
+	#vocab-holder {
+
 	.korean-word,
 	.english-word {
 	    font-weight: bold;
@@ -30,6 +32,21 @@
 				a {
 					cursor: pointer;
 				}
+				button {
+				  float: right;
+				  font-size: 20px;
+				  font-weight: bold;
+				  line-height: 20px;
+				  color: #000000;
+				  text-shadow: 0 1px 0 #ffffff;
+				  opacity: 0.2;
+				  filter: alpha(opacity=20);
+				  padding: 0;
+				  cursor: pointer;
+				  background: transparent;
+				  border: 0;
+				  -webkit-appearance: none;
+				}
 			}
 		}
 	}
@@ -43,6 +60,7 @@
 		color: #999999;
 		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 		text-transform: uppercase;
+		}
 	}
 
 	footer {
